--- a/k8s/contactus-deployment.yaml
+++ b/k8s/contactus-deployment.yaml
@@ -23,5 +23,10 @@ spec:
           value: default
         image: dhananjay12/contact-us-service:latest
         name: contactus
+        resources:
+          requests:
+            memory: "256Mi"
+          limits:
+            memory: "512Mi"
         ports:
         - containerPort: 8080
