--- a/k8s/zuul-deployment.yaml
+++ b/k8s/zuul-deployment.yaml
@@ -19,5 +19,10 @@ spec:
           value: http://eureka:8761/eureka
         image: dhananjay12/zuul-server:latest
         name: zuul
+        resources:
+          requests:
+            memory: "256Mi"
+          limits:
+            memory: "512Mi"
         ports:
         - containerPort: 8050
