--- a/k8s/contactus-deployment.yaml
+++ b/k8s/contactus-deployment.yaml
@@ -18,7 +18,7 @@ spec:
           value: -Djava.security.egd=file:/dev/./urandom
         - name: SPRING_CLOUD_CONFIG_URI
         - name: SPRING_EUREKA
-          value: http://eureka-cluster-ip-service/eureka
+          value: http://eureka:8761/eureka
         - name: SPRING_PROFILES_ACTIVE
           value: default
         image: dhananjay12/contact-us-service:latest
