--- a/k8s/eureka-deployment.yaml
+++ b/k8s/eureka-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - env:
         - name: SPRING_CLOUD_CONFIG_URI
         - name: SPRING_EUREKA
-          value: http://eureka-cluster-ip-service/eureka
+          value: http://eureka:8761/eureka
         image: dhananjay12/eureka-server:latest
         name: eureka
         resources:
