Added config to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: "3"
 services:
+  config:
+    image: "dhananjay12/config-server:latest"
+    ports:
+      - "8888:8888"
   eureka:
     image: "dhananjay12/eureka-server:latest"
     environment:
       - "SPRING_EUREKA=http://eureka:8761/eureka"
-      - "SPRING_CLOUD_CONFIG_URI=${CONFIG_CLIENT_URI}"
+      - "SPRING_CLOUD_CONFIG_URI=http://config:8888"
     ports:
       - "8761:8761"
   zuul:
     image: "dhananjay12/zuul-server:latest"
     environment:
       - "SPRING_EUREKA=http://eureka:8761/eureka"
-      - "SPRING_CLOUD_CONFIG_URI=${CONFIG_CLIENT_URI}"
+      - "SPRING_CLOUD_CONFIG_URI=${http://config:8888}"
     ports:
       - "8050:8050"
   user:
@@ -20,7 +24,7 @@ services:
       - "JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom"
       - "SPRING_PROFILES_ACTIVE=default"
       - "SPRING_EUREKA=http://eureka:8761/eureka"
-      - "SPRING_CLOUD_CONFIG_URI=${CONFIG_CLIENT_URI}"
+      - "SPRING_CLOUD_CONFIG_URI=${http://config:8888}"
     ports:
       - "8100:8100"
   contactus:
@@ -29,7 +33,7 @@ services:
       - "JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom"
       - "SPRING_PROFILES_ACTIVE=default"
       - "SPRING_EUREKA=http://eureka:8761/eureka"
-      - "SPRING_CLOUD_CONFIG_URI=${CONFIG_CLIENT_URI}"
+      - "SPRING_CLOUD_CONFIG_URI=${http://config:8888}"
     ports:
       - "8080:8080"
 
