--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: user-service
+  cloud:
+    config:
+      uri: ${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+      retry:
+        initial-interval: 5000
+        max-attempts: 10
