--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,28 @@
 		</dependencies>
 	</dependencyManagement>
 
-
+    <build>
+		<plugins>
+			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+				<version>2.2.4</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<dateFormat>ddMMyyyy-HHmmss</dateFormat><!--  human-readable part of the version number -->
+					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+					<generateGitPropertiesFile>false</generateGitPropertiesFile><!-- somehow necessary. otherwise the variables are not available in the pom -->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	
 	<modules>
 	    <module>config-server</module>
@@ -50,5 +71,5 @@
 		<module>zuul-server</module>
 	</modules>
 
-
+    
 </project>
