--- a/k8s/user-deployment.yaml
+++ b/k8s/user-deployment.yaml
@@ -17,6 +17,7 @@ spec:
         - name: JAVA_OPTS
           value: -Djava.security.egd=file:/dev/./urandom
         - name: SPRING_CLOUD_CONFIG_URI
+          value: http://config-server-cluster-ip-service:8888
         - name: SPRING_EUREKA
           value: http://eureka-cluster-ip-service:8761/eureka
         - name: SPRING_PROFILES_ACTIVE
