--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 env:
   global:
     - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -13,3 +14,20 @@ before_install:
 
 script:
   - mvn clean install -Ddocker
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
+  - curl https://sdk.cloud.google.com | bash > /dev/null;
+  - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components update kubectl
+  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set project spring-microservices-226806
+  - gcloud config set compute/zone us-central1-a
+  - gcloud container clusters get-credentials spring-k8s
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
+    condition: $SHOULD_DEPLOY = yes
