--- a/config-server-properties/eureka-server.yml
+++ b/config-server-properties/eureka-server.yml
@@ -2,6 +2,8 @@ server:
   port: 8761
 
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     registerWithEureka: false
     fetchRegistry: false
