--- a/config-server-properties/user-service.yml
+++ b/config-server-properties/user-service.yml
@@ -2,6 +2,8 @@ server:
   port: 8100
   
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     serviceUrl:
       defaultZone: ${SPRING_EUREKA:http://localhost:8761/eureka/}
