--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -4,6 +4,8 @@ spring:
   cloud:
     config:
       uri: ${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+      failFast: true
       retry:
-        initial-interval: 5000
-        max-attempts: 10
+        initialInterval: 15000
+        maxInterval: 6000
+        maxAttempts: 10
