--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -4,5 +4,8 @@ spring:
   cloud:
     config:
       uri: ${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
-      retry:        initial-interval: 5000
-        max-attempts: 10
+      failFast: true
+      retry:
+        initialInterval: 15000
+        maxInterval: 6000
+        maxAttempts: 10
