--- a/contact-us-service/src/main/resources/application.yml
+++ b/contact-us-service/src/main/resources/application.yml
@@ -5,4 +5,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${SPRING_EUREKA:http://localhost:8761/eureka/}
+
+data:
+  file:
+    path: ${DATA_FILE:/app/data}
       
